add_library(Engine STATIC)
add_library(g3sdk::g3::Engine ALIAS Engine)

target_gothic_lib_options(Engine)

target_link_libraries(Engine
  PUBLIC SharedBase GFC FileSystem
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib/Engine.lib)

target_include_directories(Engine
  PUBLIC include
  PUBLIC include/g3sdk)

target_tree_sources(Engine
  BASE include/g3sdk
  PRIVATE
    Engine.h

  # TODO: Organize sources in folders.
  BASE include/g3sdk/Engine
  PRIVATE
    EngineEnum.h
    ge_actionmapper.h
    ge_ambientmodulebase.h
    ge_ambientocclusiongrid.h
    ge_ambientocclusionpreprocessor.h
    ge_animationcache.h
    ge_animationcollisiondesc.h
    ge_application.h
    ge_audiochannel.h
    ge_audiochannelgroup.h
    ge_audioemitter_ps.h
    ge_audiomodule.h
    ge_audiosound.h
    ge_audiostreamer.h
    ge_audiosystem.h
    ge_basecache.h
    ge_buttonctrl.h
    ge_camerabase.h
    ge_canvas.h
    ge_caret.h
    ge_clipboard.h
    ge_clipboardclient.h
    ge_collisiondesc.h
    ge_collisionmeshcache.h
    ge_colorscale.h
    ge_colorscheme.h
    ge_colorsrcbase.h
    ge_colorsrcblend.h
    ge_colorsrccombiner.h
    ge_colorsrcconstant.h
    ge_colorsrccubesampler.h
    ge_colorsrcmask.h
    ge_colorsrcproxy.h
    ge_colorsrcsampler.h
    ge_colorsrcskydomesampler.h
    ge_colorsrcvertexcolor.h
    ge_configfile_keyobject.h
    ge_configfile_sectionobject.h
    ge_contactiterator.h
    ge_contextbase.h
    ge_contextmenu.h
    ge_cursor.h
    ge_d3d.h
    ge_decal.h
    ge_decal_ps.h
    ge_decaladmin.h
    ge_depthmap.h
    ge_desktop.h
    ge_directionallight_ps.h
    ge_dllinfoctrl.h
    ge_dynamicentity.h
    ge_dynamiclight_ps.h
    ge_editctrl.h
    ge_editorentitypropertyset.h
    ge_effectbase_ps.h
    ge_effectmodulebase.h
    ge_effector.h
    ge_effectordesc.h
    ge_effectsystembase.h
    ge_emotion_fx.h
    ge_enginecaps_ps.h
    ge_enginecomponentbase.h
    ge_entityadmin.h
    ge_entityctrl.h
    ge_entitydynamiccontext.h
    ge_entitytemplatecontext.h
    ge_esresourcesoundsample.h
    ge_eventdebugger_ps.h
    ge_eventfilter_ps.h
    ge_eventlogic_ps.h
    ge_filepathcache.h
    ge_fixedjoint.h
    ge_fixedjointdesc.h
    ge_flexiblebuffer.h
    ge_flexiblevtxbuffer.h
    ge_floatscale.h
    ge_fmod.h
    ge_forcefield_ps.h
    ge_frustumdatabase.h
    ge_frustumelementitem.h
    ge_frustumfilter.h
    ge_gamepad.h
    ge_geometrycollisiondesc.h
    ge_geometryspatialcontext.h
    ge_gfxadmin.h
    ge_gfxassistantadmin.h
    ge_gfxcamera.h
    ge_gfxcamerastates.h
    ge_gfxcontextadmin.h
    ge_gfxeffect.h
    ge_gfxfog.h
    ge_gfxgaugeadmin.h
    ge_gfxhlslshader.h
    ge_gfximageavidata.h
    ge_gfximagedata.h
    ge_gfxindexdata.h
    ge_gfxlight.h
    ge_gfxmaterial.h
    ge_gfxmixeradmin.h
    ge_gfxpixelprogram.h
    ge_gfxshader.h
    ge_gfxshared.h
    ge_gfxsprite.h
    ge_gfxtextureblock.h
    ge_gfxvertexdata.h
    ge_gfxvertexdecl.h
    ge_gfxvertexprogram.h
    ge_gfxvisual.h
    ge_gfxvisualcollection.h
    ge_guiadmin.h
    ge_guiconsoledialog.h
    ge_guiconsoleedit.h
    ge_guiconsolelistbox.h
    ge_guidatabase.h
    ge_guimanager.h
    ge_guimodule.h
    ge_guiobjectinspectordialog.h
    ge_guirenderer.h
    ge_guistreamer.h
    ge_guisubadmin.h
    ge_hemisphere_ps.h
    ge_illuminated_ps.h
    ge_illuminationadmin.h
    ge_imageadmin.h
    ge_imagecache.h
    ge_imagegroup.h
    ge_imagegrouplistener.h
    ge_imagelist.h
    ge_imageprocessingadmin.h
    ge_inpadmin.h
    ge_inpcontextadmin.h
    ge_ipimagefilterbase.h
    ge_ipimagefilterblur.h
    ge_ipimagefilterdof.h
    ge_ipimagefilteredgeblur.h
    ge_ipimagefilterfeedback.h
    ge_ipimagefilterfinalblend.h
    ge_ipimagefilterhdri.h
    ge_ipimagefilterlightmapborders.h
    ge_ipimagefilterlightmaplight.h
    ge_ipimagefiltermaskhightlights.h
    ge_ipimagefilternoise.h
    ge_ipsourcebackbuffer.h
    ge_ipsourcebase.h
    ge_ipsourcecontainer.h
    ge_ipsourceloader.h
    ge_iterator.h
    ge_iteratoradmin.h
    ge_iteratorprimitive.h
    ge_iteratorprimitivelinelist.h
    ge_iteratorprimitivetrianglelist.h
    ge_iteratorreport.h
    ge_joint.h
    ge_jointdesc.h
    ge_jointlimitdesc.h
    ge_jointlimitpairdesc.h
    ge_lightmap.h
    ge_lightmapbatcher.h
    ge_lightmapbitmap.h
    ge_lightset.h
    ge_linkcontainer_ps.h
    ge_listboxctrl.h
    ge_listctrl.h
    ge_lodimportdesc.h
    ge_lodmesh.h
    ge_logoctrl.h
    ge_maincache.h
    ge_materialadmin.h
    ge_materialcache.h
    ge_materialcanvas.h
    ge_materialeffect.h
    ge_materialeffectcache.h
    ge_menu.h
    ge_menuitem.h
    ge_meshcache.h
    ge_meshcollisiondesc.h
    ge_meshelement.h
    ge_messagebox.h
    ge_moduleadmin.h
    ge_motordesc.h
    ge_mouse.h
    ge_node.h
    ge_objectinspector.h
    ge_occlusionprocessor.h
    ge_particle_ps.h
    ge_particlematerial.h
    ge_particlematerialblendsubdivisions.h
    ge_particlematerialsimple.h
    ge_particlemodule.h
    ge_particlesound.h
    ge_particlesoundarray.h
    ge_performanceadmin.h
    ge_performancectrlcreator.h
    ge_physicobject.h
    ge_physicobjectstatebuffer.h
    ge_physicsscene_ps.h
    ge_physx.h
    ge_pointlight_ps.h
    ge_polygeometrycollisiondesc.h
    ge_postprocessingadmin.h
    ge_postprocessingeffectbase.h
    ge_postprocessingeffectdefault.h
    ge_postprocessingeffectmain.h
    ge_precipitation_ps.h
    ge_primitivecollisiondesc.h
    ge_processibleelement.h
    ge_progressctrl.h
    ge_propertyctrl.h
    ge_propertylogic.h
    ge_propertyproxy.h
    ge_propertyproxycollection.h
    ge_propertysetctrl.h
    ge_refptrarray.h
    ge_rendercomplexmesh.h
    ge_rendercontextdebug.h
    ge_rendercontextlegacy.h
    ge_rendercontextmesh.h
    ge_rendercontextspeedtree.h
    ge_renderlodmesh.h
    ge_rendermeshelement.h
    ge_renderop.h
    ge_renderop2.h
    ge_rendersystemadmin.h
    ge_resourceadmin.h
    ge_resourceanimationmotion_ps.h
    ge_resourceaudiosample_ps.h
    ge_resourcebase_ps.h
    ge_resourcecollisionmesh_ps.h
    ge_resourcedataentity.h
    ge_resourceimage_ps.h
    ge_resourceimageavi_ps.h
    ge_resourceimagelist_ps.h
    ge_resourcelightmap_ps.h
    ge_resourcematerialobject_ps.h
    ge_resourcematerialobjectextended_ps.h
    ge_resourcematerialtechnique_ps.h
    ge_resourcemesh_ps.h
    ge_resourcemeshcomplex_ps.h
    ge_resourcemeshlod_ps.h
    ge_resourceshadermaterial_ps.h
    ge_resourcesimplesound_ps.h
    ge_resourcesound_ps.h
    ge_resourcesoundlist_ps.h
    ge_resourcespeedtree_ps.h
    ge_resourcestoragecontext.h
    ge_rigidbody_ps.h
    ge_rigidbodybase_ps.h
    ge_sceneadmin.h
    ge_scriptadminbase.h
    ge_scrollbarctrl.h
    ge_shaderbase.h
    ge_shaderdefault.h
    ge_shaderellementbase.h
    ge_shaderellementproxy.h
    ge_shaderellementproxy_typed.h
    ge_shaderleaf.h
    ge_shadermaterialadmin.h
    ge_shaderparticle.h
    ge_shaderskin.h
    ge_shaderskydome.h
    ge_shadervegetation.h
    ge_shaderwater.h
    ge_shadowmapbase.h
    ge_shadowmapdirectionallight.h
    ge_shadowmapdirectionallightbase.h
    ge_shadowmapdirectionallightlspsm.h
    ge_shadowmappointlight.h
    ge_shadowmapspotlight.h
    ge_skydome_ps.h
    ge_skyobject.h
    ge_soundcache.h
    ge_speedtree_ps.h
    ge_speedtreeadmin.h
    ge_speedtreecache.h
    ge_speedtreecollisiondesc.h
    ge_speedtreerenderbuffer.h
    ge_speedtreewind_ps.h
    ge_sphericaljoint.h
    ge_sphericaljointdesc.h
    ge_splash.h
    ge_springanddampereffector.h
    ge_springanddampereffectordesc.h
    ge_springdesc.h
    ge_staticctrl.h
    ge_staticlight_ps.h
    ge_staticlightpreprocessor.h
    ge_staticpointlight_ps.h
    ge_staticspotlight_ps.h
    ge_statisticctrl.h
    ge_stringwrapper.h
    ge_strip_ps.h
    ge_tabctrl.h
    ge_terrainshadowmap.h
    ge_texcoordsrcbase.h
    ge_texcoordsrcbumpoffset.h
    ge_texcoordsrccolor.h
    ge_texcoordsrcoscillator.h
    ge_texcoordsrcproxy.h
    ge_texcoordsrcrotator.h
    ge_texcoordsrcscale.h
    ge_texcoordsrcscroller.h
    ge_themeadmin.h
    ge_threadpool.h
    ge_titlebarctrl.h
    ge_tooltipctrl.h
    ge_treectrl.h
    ge_trigger_ps.h
    ge_triggerbase_ps.h
    ge_triggercombiner_ps.h
    ge_triggerlist_ps.h
    ge_vectorscale.h
    ge_vegetation_grid.h
    ge_vegetation_gridnode.h
    ge_vegetation_mesh.h
    ge_vegetation_ps.h
    ge_vegetationadmin.h
    ge_vegetationbrush_ps.h
    ge_vegetationrubber_ps.h
    ge_vertexbufferpool.h
    ge_vertexbufferpoolitem.h
    ge_vertexbufferpoolitemlightmap.h
    ge_vertexbufferpoolitemmain.h
    ge_vertexprocessor.h
    ge_vertexprocessoradditional.h
    ge_vertexprocessorindex.h
    ge_vertexprocessorlightmap.h
    ge_vertexprocessormain.h
    ge_vertexstreamfactory.h
    ge_vertexstructarraybase.h
    ge_vertexstructfactory.h
    ge_visualanimationlipsync.h
    ge_visualmeshbase_ps.h
    ge_visualmeshdynamic_ps.h
    ge_visualmeshstatic_ps.h
    ge_weatheradmin.h
    ge_weatherenvironment.h
    ge_weatherstates.h
    ge_weatherzone_ps.h
    ge_wraper_speedtreert.h
    ge_wrapper_emfx2motion.h
    ge_wrapper_emfx2services.h
    animation/ge_animation_baserenderactor.h
    animation/ge_animation_hardrenderactor.h
    animation/ge_animation_hardwareskinner.h
    animation/ge_animationadmin.h
    animation/ge_rendercontext.h
    animation/ge_rendercontextanimation.h
    animation/ge_resourceanimationactor_ps.h
    animation/ge_visualanimation_ps.h
    animation/ge_visualanimationfactory.h
    animation/ge_visualanimationlod.h
    animation/ge_wrapper_emfx2actor.h
    api/dx9/ge_dx9cubemap.h
    api/dx9/ge_dx9device.h
    api/dx9/ge_dx9effect.h
    api/dx9/ge_dx9font.h
    api/dx9/ge_dx9hlslshader.h
    api/dx9/ge_dx9indexdata.h
    api/dx9/ge_dx9instance.h
    api/dx9/ge_dx9primitive.h
    api/dx9/ge_dx9sprite.h
    api/dx9/ge_dx9texture.h
    api/dx9/ge_dx9vertexdata.h
    api/dx9/ge_dx9volume.h
    api/ge_apicubemap.h
    api/ge_apidevice.h
    api/ge_apieffect.h
    api/ge_apifont.h
    api/ge_apihlslshader.h
    api/ge_apiindexdata.h
    api/ge_apiinstance.h
    api/ge_apiprimitive.h
    api/ge_apisprite.h
    api/ge_apitexture.h
    api/ge_apivertexdata.h
    api/ge_apivolume.h
    cell/ge_pvscellitem.h
    cell/ge_pvsprefetcher3.h
    cell/ge_pvsprefetcherjob.h
    collision/ge_collisionshape.h
    collision/ge_collisionshape_ps.h
    collision/ge_collisionshapebase_ps.h
    collision/ge_physicqueryreport.h
    collision/ge_physicsscene.h
    entity/ge_entity.h
    entity/ge_entitypropertyset.h
    entity/ge_propertysetproxy.h
    entity/ge_spatialentity.h
    entity/ge_templateentity.h
    entity/proxy/ge_entityproxy.h
    entity/proxy/ge_entityproxyinternal.h
    entity/proxy/ge_templateentityproxy.h
    font/ge_font.h
    font/ge_fontadmin.h
    font/ge_gfxfont.h
    font/ge_systemfont.h
    font/ge_vertexfont.h
    io/console/ge_commandmanager.h
    io/console/ge_console.h
    io/console/ge_consolecommands.h
    io/console/ge_consoledata.h
    io/console/ge_consoledlg.h
    io/file/ge_archivefile.h
    io/file/ge_archivemanager.h
    io/file/ge_configfile.h
    io/file/ge_unicodeconfigfile.h
    io/file/ge_unicodeconfigfile_keyobject.h
    io/file/ge_unicodeconfigfile_sectionobject.h
    io/file/ge_virtualfile.h
    io/file/ge_virtualfilefind.h
    io/file/ge_virtualfilesystem.h
    io/ge_dialog.h
    io/ge_inpshared.h
    io/ge_inputdispatcher.h
    io/ge_inputreceiver.h
    io/ge_keyboard.h
    io/ge_messagehandler.h
    io/ge_objectinspectordlg.h
    io/ge_window.h
    io/ge_wnd.h
    localization/ge_locadmin.h
    localization/ge_locstring.h
    localization/ge_loctable.h

  BASE src
  PRIVATE
    api/dx9/ge_dx9instance.cpp
)
